@@ -30,7 +30,7 @@ class MethodFinder {
 		Matcher matcher = METHOD_PATTERN.matcher(methodSpecPart);
 
 		Preconditions.condition(matcher.matches(),
-			() -> String.format("Method [%s] does not match pattern [%s]", methodSpecPart, METHOD_PATTERN));
+			() -> "Method [%s] does not match pattern [%s]".formatted(methodSpecPart, METHOD_PATTERN));
 
 		String methodName = matcher.group(1);
 		String parameterTypeNames = matcher.group(2);
