@@ -208,14 +208,14 @@ public class MethodSource implements TestSource {
 			if (StringUtils.isNotBlank(this.methodParameterTypes)) {
 				this.javaMethod = ReflectionSupport.findMethod(this.javaClass, this.methodName,
 					this.methodParameterTypes).orElseThrow(
-						() -> new PreconditionViolationException(String.format(
-							"Could not find method with name [%s] and parameter types [%s] in class [%s].",
-							this.methodName, this.methodParameterTypes, this.javaClass.getName())));
+						() -> new PreconditionViolationException(
+							"Could not find method with name [%s] and parameter types [%s] in class [%s].".formatted(
+								this.methodName, this.methodParameterTypes, this.javaClass.getName())));
 			}
 			else {
 				this.javaMethod = ReflectionSupport.findMethod(this.javaClass, this.methodName).orElseThrow(
 					() -> new PreconditionViolationException(
-						String.format("Could not find method with name [%s] in class [%s].", this.methodName,
+						"Could not find method with name [%s] in class [%s].".formatted(this.methodName,
 							this.javaClass.getName())));
 			}
 		}
