@@ -40,8 +40,8 @@ public enum DefaultParallelExecutionConfigurationStrategy implements ParallelExe
 		public ParallelExecutionConfiguration createConfiguration(ConfigurationParameters configurationParameters) {
 			int parallelism = configurationParameters.get(CONFIG_FIXED_PARALLELISM_PROPERTY_NAME,
 				Integer::valueOf).orElseThrow(
-					() -> new JUnitException(String.format("Configuration parameter '%s' must be set",
-						CONFIG_FIXED_PARALLELISM_PROPERTY_NAME)));
+					() -> new JUnitException(
+						"Configuration parameter '%s' must be set".formatted(CONFIG_FIXED_PARALLELISM_PROPERTY_NAME)));
 
 			int maxPoolSize = configurationParameters.get(CONFIG_FIXED_MAX_POOL_SIZE_PROPERTY_NAME,
 				Integer::valueOf).orElse(parallelism + 256);
@@ -66,8 +66,8 @@ public enum DefaultParallelExecutionConfigurationStrategy implements ParallelExe
 				BigDecimal::new).orElse(BigDecimal.ONE);
 
 			Preconditions.condition(factor.compareTo(BigDecimal.ZERO) > 0,
-				() -> String.format("Factor '%s' specified via configuration parameter '%s' must be greater than 0",
-					factor, CONFIG_DYNAMIC_FACTOR_PROPERTY_NAME));
+				() -> "Factor '%s' specified via configuration parameter '%s' must be greater than 0".formatted(factor,
+					CONFIG_DYNAMIC_FACTOR_PROPERTY_NAME));
 
 			int parallelism = Math.max(1,
 				factor.multiply(BigDecimal.valueOf(Runtime.getRuntime().availableProcessors())).intValue());
@@ -75,8 +75,7 @@ public enum DefaultParallelExecutionConfigurationStrategy implements ParallelExe
 			int maxPoolSize = configurationParameters.get(CONFIG_DYNAMIC_MAX_POOL_SIZE_FACTOR_PROPERTY_NAME,
 				BigDecimal::new).map(maxPoolSizeFactor -> {
 					Preconditions.condition(maxPoolSizeFactor.compareTo(BigDecimal.ONE) >= 0,
-						() -> String.format(
-							"Factor '%s' specified via configuration parameter '%s' must be greater than or equal to 1",
+						() -> "Factor '%s' specified via configuration parameter '%s' must be greater than or equal to 1".formatted(
 							factor, CONFIG_DYNAMIC_MAX_POOL_SIZE_FACTOR_PROPERTY_NAME));
 					return maxPoolSizeFactor.multiply(BigDecimal.valueOf(parallelism)).intValue();
 				}).orElseGet(() -> 256 + parallelism);
