@@ -65,8 +65,7 @@ final class IsSuiteClass implements Predicate<Class<?>> {
 	}
 
 	private static DiscoveryIssue createIssue(Class<?> testClass, String detailMessage) {
-		String message = String.format("@Suite class '%s' %s It will not be executed.", testClass.getName(),
-			detailMessage);
+		String message = "@Suite class '%s' %s It will not be executed.".formatted(testClass.getName(), detailMessage);
 		return DiscoveryIssue.builder(DiscoveryIssue.Severity.WARNING, message) //
 				.source(ClassSource.from(testClass)) //
 				.build();
